feat(api): delete readings singly or in bulk, admin page sharing and manual readings (#21, #42)
